# data-assembler

./: .gitignore  Dockerfile  README.md  architecture.md  example.sh  expt_34347.yaml  pyproject.toml
.github/workflows/: python-test.yml
docs/: architecture.md  phase1-review-and-planning.md  project.md
src/assembler/: __init__.py  compat.py  enums.py  result_manifest.py  validation.py
src/assembler/cli/: __init__.py  main.py
src/assembler/instruments/: __init__.py  base.py  ref_l.py
src/assembler/models/: __init__.py  base.py  environment.py  layer.py  material.py  measurement.py  sample.py
src/assembler/parsers/: __init__.py  conditions.py  manifest_parser.py  model_parser.py  parquet_parser.py  reduced_parser.py
src/assembler/tools/: __init__.py  detection.py  finder.py  types.py
src/assembler/workflow/: __init__.py  assembler.py  builders.py  record_builders.py  result.py
src/assembler/workflow/builders/: __init__.py  environment.py  reflectivity.py  reflectivity_model.py  sample.py  utils.py
src/assembler/writers/: __init__.py  json_writer.py  parquet_writer.py  ravendb_writer.py  schemas.py  serializers.py
tests/: conftest.py  test_cli.py  test_conditions.py  test_ingest_state.py  test_instruments.py  test_models.py  test_parsers.py  test_real_data.py  test_result_manifest_contract.py  test_state_vendor.py  test_workflow.py
